[package]
name = "serve-json"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1", features = ["attributes"] }
anyhow = "1"
clap = "3.0.0-beta.1"
env_logger = "0.7"
log = "0.4"
tide = "0.11"

[dependencies.rusqlite]
features = ["bundled"]
version = "0.23"
